# nolgia-cli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml  revendor-spec.yml
crates/cli/skills/nolgia-platform/: SKILL.md
crates/cli/src/: auth.rs  main.rs
crates/cli/src/commands/: assets.rs  gen.rs  projects.rs
crates/cli/tests/: cli_commands.rs
crates/client/: Cargo.toml  build.rs  openapi.yaml
crates/client/src/: lib.rs
npm/: README.md  package.json
tests/: install_sh_test.sh
