[workspace]
members = ["crates/client", "crates/cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
nolgia-client = { path = "crates/client", version = "0.2.4" }
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/nolgiacorp/nolgia-cli"

[profile.release]
lto = "thin"
strip = "symbols"
